--- a/host.html
+++ b/host.html
@@ -62,10 +62,10 @@
 
   <script>
   // ✅ Your GitHub domain
-  const myDomain = "moonagency01-svg/agencywebsite";
+  const myDomain = "moonagency01-svg.github.io/agencywebsite";
 
   // ✅ Replace with your actual Apps Script URLs
-const apiUrl = "https://script.google.com/macros/s/AKfycbwpj1RCPKveFAAipaKvDUx_39CnpKU8FzSK41fVapWc5BIweU7TY4mTxYnLfmcVZ1h9lQ/exec;" // Your host API URL
+const apiUrl = "https://script.google.com/macros/s/AKfycbydnUKPASHLQwo26-_CzKym64KkQ6Ad_QpmYEigEj804n5Xc9xzX9-PuykbcnzVk_pXBw/exec;" // Your host API URL
 const eventApiUrl = "https://script.google.com/macros/s/AKfycbz2jYz0ifZvFoQi4_Ka11rSUnfzoiZUfsJldXyIvn3mpnwGCEqftbvDPFy_FBUpJHR7dQ/exec"; // Your PK event API URL
 
   // Optional: allow CORS proxy for testing
@@ -190,4 +190,5 @@ if (youtubeLink) {
   </script>
 </body>
 </html>
+
 
