--- a/host.html
+++ b/host.html
@@ -62,7 +62,7 @@
 
   <script>
   // ✅ Your GitHub domain
-  const myDomain = "moonagency01-svg.github.io/agencywebsite";
+ const myDomain = "https://moonagency01-svg.github.io/agencywebsite";
 
   // ✅ Replace with your actual Apps Script URLs
 const apiUrl = "https://script.google.com/macros/s/AKfycbw1H8IqHuFhj64EubV3eRJa_4C1Ka8O8Q0uF8ThVEnqFZgdwyhdg-7b3GmESvhfMcUqlg/exec;" // Your host API URL
@@ -190,6 +190,7 @@ if (youtubeLink) {
   </script>
 </body>
 </html>
+
 
 
 
