--- a/host.html
+++ b/host.html
@@ -3,72 +3,79 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Hosts | Moon Agency</title>
+  <title>Host</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <!-- Header -->
   <header>
     <div class="logo">
-      <img src="images/logo.png" alt="Logo">
+      <img src="images/logo.png" alt="My Logo">
       <span class="company-name">Moon Agency</span>
     </div>
+
+    <!-- Language Selector -->
+    <div class="lang-select">
+      <select>
+        <option value="en">English</option>
+        <option value="tl">Tagalog</option>
+      </select>
+    </div>
+
+    <!-- Hamburger Menu -->
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
     <nav id="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="host.html" class="active">Host</a></li>
+        <li><a href="host.html">Host</a></li>
         <li><a href="pk-event.html">PK Event</a></li>
         <li><a href="tutorial.html">Tutorial</a></li>
         <li><a href="game.html">Game</a></li>
         <li><a href="about.html">About</a></li>
+      
       </ul>
     </nav>
   </header>
 
   <!-- Main Content -->
-  <main>
+   <main>
     <section id="hosts">
       <h2>Our Hosts</h2>
       <div class="carousel" id="host-carousel">
-        <p>Loading hosts...</p>
+        <!-- Hosts will be loaded here -->
       </div>
     </section>
   </main>
 
-  <!-- Modal -->
-  <div id="hostModal" class="modal">
-    <div class="modal-content modal-grid">
-      <span class="close">&times;</span>
+<!-- Modal -->
+<div id="hostModal" class="modal">
+  <div class="modal-content modal-grid">
+    <span class="close">&times;</span>
 
-      <!-- Left: PK Events -->
-      <div class="modal-left">
-        <h3>PK Events</h3>
-        <ul id="modalEvents"><li>Loading events...</li></ul>
-      </div>
+    <!-- Left column: PK events -->
+    <div class="modal-left">
+      <h3>PK Events</h3>
+      <ul id="modalEvents">
+        <li>Loading events...</li>
+      </ul>
+    </div>
 
-      <!-- Right: Host Info -->
-      <div class="modal-right">
-        <img id="modalImage" src="" alt="Host">
-        <h3 id="modalName"></h3>
-        <p id="modalId"></p>
-        <div id="modalVideoContainer">
-          <p>No video available</p>
-        </div>
+    <!-- Right column: host info -->
+    <div class="modal-right">
+      <img id="modalImage" src="" alt="Host">
+      <h3 id="modalName"></h3>
+      <p id="modalId"></p>
+      <div id="modalVideoContainer">
+        <p>No video available</p>
       </div>
     </div>
   </div>
+</div>
 
- <script>
-// ✅ Your GitHub Pages domain
-const myDomain = "https://moonagency01-svg.github.io/agencywebsite";
-
-// ✅ Replace these with your actual deployed Apps Script URLs
-const apiUrl = "https://script.google.com/macros/s/AKfycbx2zLWFmYYeIi8LzGcaqu-aYrPlyQra3lCbjdr1i9uJLgBHJ5Y6fYsZPE68qgtpEvV_GA/exec;" // Your host API URL
+<script>
+const apiUrl = "https://script.google.com/macros/s/AKfycbw6Xy9qvRVLENCxh5cZnW5xWIUcyGJIGgju57feqtWygpQ__SVFLlBgFzuqWIOJWp-vSQ/exec"; // Your host API URL
 const eventApiUrl = "https://script.google.com/macros/s/AKfycbz2jYz0ifZvFoQi4_Ka11rSUnfzoiZUfsJldXyIvn3mpnwGCEqftbvDPFy_FBUpJHR7dQ/exec"; // Your PK event API URL
-
-
+const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(apiUrl)}`;
 
 const carousel = document.getElementById("host-carousel");
 
@@ -81,16 +88,12 @@ const modalVideoContainer = document.getElementById("modalVideoContainer");
 const modalEvents = document.getElementById("modalEvents");
 const closeModal = document.querySelector(".close");
 
-// Use a CORS proxy to bypass Google’s CORS restriction
-const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(apiUrl + "?referer=" + myDomain)}`;
+carousel.innerHTML = "<p>Loading hosts...</p>";
 
 fetch(proxyUrl)
   .then(res => res.json())
   .then(data => {
-    console.log("✅ Host data:", data);
-    const carousel = document.getElementById("host-carousel");
     carousel.innerHTML = "";
-   
 
     if (!data.length) {
       carousel.innerHTML = "<p>No hosts found.</p>";
@@ -100,44 +103,48 @@ fetch(proxyUrl)
     data.forEach(host => {
       const hostId = host.id;
       const hostName = host.name;
-      const youtubeLink = host.youtube;
-      const photoUrl = host.pictureurl || "images/hosts/default.webp";
-      const defaultSrc = "images/hosts/default.webp";
+      const youtubeLink = host.youtube; // 3rd column in your sheet
+
+      if (!hostName) return;
+
+      const imgSrc = `images/hosts/${hostName}.webp`;
+      const fallbackSrc = `images/hosts/${hostName}.png`;
+      const defaultSrc = `images/hosts/default.webp`;
 
       const card = document.createElement("div");
       card.classList.add("host-card");
       card.innerHTML = `
-        <img src="${photoUrl || defaultSrc}" 
-             alt="${hostName}" 
-             onerror="this.onerror=null;this.src='${defaultSrc}'">
+        <img src="${imgSrc}" alt="${hostName}"
+             onerror="this.onerror=null;
+                      this.src='${fallbackSrc}';
+                      this.onerror=function(){this.src='${defaultSrc}'};">
         <h3>${hostName}</h3>
         <p>ID: ${hostId}</p>
-        ${youtubeLink ? `<a href="${youtubeLink}" target="_blank">🎥 YouTube</a>` : ""}
       `;
 
-      
-      // 🔹 Open modal when host is clicked
+      // Add click event to open modal
       card.addEventListener("click", () => {
         modal.style.display = "flex";
-        modalImg.src = photoUrl;
+        modalImg.src = imgSrc;
         modalName.textContent = hostName;
         modalId.textContent = `ID: ${hostId}`;
 
-        // 🔹 Embed YouTube Playlist or Video
+        // YouTube playlist embed
         if (youtubeLink) {
           modalVideoContainer.innerHTML = `
-            <iframe src="https://www.youtube.com/embed/videoseries?list=${youtubeLink}"
-                    allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/videoseries?list=${youtubeLink}" 
+            allowfullscreen></iframe>
           `;
         } else {
-          modalVideoContainer.innerHTML = "<p>No video available</p>";
+          modalVideoContainer.innerHTML = `<p>No video available</p>`;
         }
 
-        // 🔹 Load PK Events
+        // Fetch PK events for this host
         fetch(eventApiUrl)
           .then(res => res.json())
           .then(events => {
-            const filtered = events.filter(e => e.id.toLowerCase() === hostId.toLowerCase());
+           const filtered = events.filter(e => e.id.toLowerCase() === hostId.toLowerCase());
+
             if (filtered.length) {
               modalEvents.innerHTML = filtered.map(e => `
                 <li>
@@ -147,12 +154,12 @@ fetch(proxyUrl)
                 </li>
               `).join("");
             } else {
-              modalEvents.innerHTML = "<li>No PK events found</li>";
+              modalEvents.innerHTML = `<li>No PK events found</li>`;
             }
           })
           .catch(err => {
             console.error("Error loading events:", err);
-            modalEvents.innerHTML = "<li>Failed to load events</li>";
+            modalEvents.innerHTML = `<li>Failed to load events</li>`;
           });
       });
 
@@ -160,20 +167,22 @@ fetch(proxyUrl)
     });
   })
   .catch(err => {
-    console.error("❌ Error loading hosts:", err);
+    console.error("Error loading hosts:", err);
     carousel.innerHTML = "<p>Unable to load hosts.</p>";
   });
 
-// 🔹 Close modal
+// Close modal
 closeModal.addEventListener("click", () => {
   modal.style.display = "none";
 });
-window.addEventListener("click", e => {
-  if (e.target === modal) modal.style.display = "none";
+
+// Close if clicked outside content
+window.addEventListener("click", (e) => {
+  if (e.target === modal) {
+    modal.style.display = "none";
+  }
 });
 </script>
-
-
 
   <!-- Footer -->
 <footer class="footer-contact">
@@ -196,13 +205,3 @@ window.addEventListener("click", e => {
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
