--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="host.html">Host</a></li>
         <li><a href="pk-event.html">PK Event</a></li>
+        <li><a href="calculator.html">Calculator</a></li>
         <li><a href="tutorial.html">Tutorial</a></li>
         <li><a href="game.html">Game</a></li>
         <li><a href="about.html">About</a></li>
@@ -79,4 +80,5 @@
     });
   </script>
 </body>
+
 </html>
