--- a/tutorial.html
+++ b/tutorial.html
@@ -40,6 +40,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="host.html">Host</a></li>
         <li><a href="pk-event.html">PK Event</a></li>
+        <li><a href="calculator.html">Calculator</a></li>
         <li><a href="tutorial.html">Tutorial</a></li>
         <li><a href="game.html">Game</a></li>
         <li><a href="about.html">About</a></li>
@@ -137,3 +138,4 @@
   
 </body>
 </html>
+
