--- a/host.html
+++ b/host.html
@@ -42,6 +42,15 @@
    <main>
     <section id="hosts">
       <h2>Our Hosts</h2>
+
+<!-- Download Button -->
+    <div class="download-bigo">
+      <p>Want to join and support our hosts?</p>
+      <a href="https://livestream.onelink.me/ZYcM/IricaAmante" target="_blank" class="download-btn">
+        📲 Click Here to Download Bigo Live on Android or IOS
+      </a>
+    </div>
+      
       <div class="carousel" id="host-carousel">
         <!-- Hosts will be loaded here -->
       </div>
@@ -206,5 +215,6 @@ window.addEventListener("click", (e) => {
   </script>
 </body>
 </html>
+
 
 
